--- a/cmdr.css
+++ b/cmdr.css
@@ -1,3 +1,14 @@
+/*
+ * cmdrjs
+ * Version 1.0.0-alpha
+ * Copyright 2014 Shaftware.
+ * All Rights Reserved.  
+ * Use, reproduction, distribution, and modification of this code is subject to the terms and 
+ * conditions of the MIT license, available at http://www.opensource.org/licenses/mit-license.php
+ *
+ * Project: https://github.com/shaftware/cmdrjs
+ */
+
 .cmdr {
     position: absolute;
     top: 0;
