--- a/cmdr.css
+++ b/cmdr.css
@@ -25,9 +25,10 @@
 }
 
 .cmdr .input {
+    -webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;  
     position: relative;
-    top: -1px;
-    padding-top: 1px;
 }
 
 .cmdr .input .prefix {
@@ -43,22 +44,15 @@
     background: transparent;
     color: #fff;
     font-family: "Courier New";
+    padding: 0;
     margin: 0;
-    margin-left: -2px;
-    padding-top: 1px;
     width: 100%;
+    line-height: 1;
     overflow: auto;
     font-size: 10pt;
     position: absolute;
     left: 0;
-    top: 0;
-    line-height: 1;
-}
-
-@-moz-document url-prefix() { 
-  .cmdr .input textarea {
-    margin-left: -1px;
-  }
+    top: 1px;
 }
 
 .cmdr .input textarea:focus {
@@ -75,4 +69,18 @@
 
 .cmdr .output .error {
     color: red;
+}
+
+/* Hacks for all browsers except IE and Safari */
+@media screen { @media (min-width: 0px) { 
+  .cmdr .input textarea {
+      top: 2px;
+  }
+}}
+
+/* Hacks for FF */
+@-moz-document url-prefix() { 
+  .cmdr .input textarea {
+      left: -1px;
+  }
 }
