Success write style #14

--- a/cmdr.css
+++ b/cmdr.css
@@ -66,6 +66,10 @@
     white-space: pre-wrap; 
 }
 
+.cmdr .output .success {
+    color: green;
+}
+
 .cmdr .output .warning {
     color: yellow;
 }
