--- a/cmdr.css
+++ b/cmdr.css
@@ -1,6 +1,6 @@
 /*
  * cmdrjs
- * Version 1.0.1-alpha
+ * Version 1.0.2-alpha
  * Copyright 2014 Shaftware.
  * All Rights Reserved.  
  * Use, reproduction, distribution, and modification of this code is subject to the terms and 
@@ -35,28 +35,27 @@
     display: inline-block;
 }
 
-.cmdr .input textarea {
+.cmdr .input .prompt {
     -webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;  
-    resize: none;
-    border: transparent 0 none;
-    background: transparent;
-    color: #fff;
-    font-family: "Courier New";
     padding: 0;
     margin: 0;
     width: 100%;
-    line-height: 1;
     overflow: auto;
     font-size: 10pt;
     position: absolute;
     left: 0;
-    top: 1px;
+    top: 0;
+    word-break: break-all;
 }
 
-.cmdr .input textarea:focus {
+.cmdr .input .prompt:focus {
     outline: none;
+}
+
+.cmdr .output div {
+    word-break: break-all;
 }
 
 .cmdr .output span {
@@ -67,7 +66,7 @@
 }
 
 .cmdr .output .success {
-    color: green;
+    color: #4cff00;
 }
 
 .cmdr .output .warning {
@@ -77,10 +76,3 @@
 .cmdr .output .error {
     color: red;
 }
-
-/* Hacks for all browsers except IE and Safari */
-@media screen { @media (min-width: 0px) { 
-  .cmdr .input textarea {
-      top: 2px;
-  }
-}}
