--- a/src/cmdr.css
+++ b/src/cmdr.css
@@ -1,20 +1,4 @@
-/*
- * cmdrjs
- * Version 1.0.4-alpha
- * Copyright 2015 Shaftware.
- * All Rights Reserved.  
- * Use, reproduction, distribution, and modification of this code is subject to the terms and 
- * conditions of the MIT license, available at http://www.opensource.org/licenses/mit-license.php
- *
- * Project: https://github.com/shaftware/cmdrjs
- */
-
-.cmdr {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+.cmdr-console {
     background: #000;
     opacity: 0.9;
     overflow-y: auto;
@@ -24,18 +8,18 @@
     font-size: 10pt;
 }
 
-.cmdr .input {
+.cmdr-console .input {
     -webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;  
     position: relative;
 }
 
-.cmdr .input .prefix {
+.cmdr-console .input .prefix {
     display: inline-block;
 }
 
-.cmdr .input .prompt {
+.cmdr-console .input .prompt {
     -webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;  
@@ -51,29 +35,29 @@
     outline: 0;
 }
 
-.cmdr .input .prompt:focus {
+.cmdr-console .input .prompt:focus {
     outline: none;
 }
 
-.cmdr .output div {
+.cmdr-console .output div {
     word-break: break-all;
 }
 
-.cmdr .output span {
+.cmdr-console .output span {
     white-space: -moz-pre-wrap;
     white-space: -pre-wrap; 
     white-space: -o-pre-wrap; 
     white-space: pre-wrap; 
 }
 
-.cmdr .output .success {
+.cmdr-console .output .success {
     color: #4cff00;
 }
 
-.cmdr .output .warning {
+.cmdr-console .output .warning {
     color: yellow;
 }
 
-.cmdr .output .error {
+.cmdr-console .output .error {
     color: red;
 }
