--- a/src/old/cmdr.css
+++ b/src/old/cmdr.css
@@ -1,4 +1,20 @@
-.cmdr-console {
+/*
+ * cmdrjs
+ * Version 1.0.4-alpha
+ * Copyright 2015 Shaftware.
+ * All Rights Reserved.  
+ * Use, reproduction, distribution, and modification of this code is subject to the terms and 
+ * conditions of the MIT license, available at http://www.opensource.org/licenses/mit-license.php
+ *
+ * Project: https://github.com/shaftware/cmdrjs
+ */
+
+.cmdr {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     background: #000;
     opacity: 0.9;
     overflow-y: auto;
@@ -8,18 +24,18 @@
     font-size: 10pt;
 }
 
-.cmdr-console .input {
+.cmdr .input {
     -webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;  
     position: relative;
 }
 
-.cmdr-console .input .prefix {
+.cmdr .input .prefix {
     display: inline-block;
 }
 
-.cmdr-console .input .prompt {
+.cmdr .input .prompt {
     -webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;  
@@ -35,29 +51,29 @@
     outline: 0;
 }
 
-.cmdr-console .input .prompt:focus {
+.cmdr .input .prompt:focus {
     outline: none;
 }
 
-.cmdr-console .output div {
+.cmdr .output div {
     word-break: break-all;
 }
 
-.cmdr-console .output span {
+.cmdr .output span {
     white-space: -moz-pre-wrap;
     white-space: -pre-wrap; 
     white-space: -o-pre-wrap; 
     white-space: pre-wrap; 
 }
 
-.cmdr-console .output .success {
+.cmdr .output .success {
     color: #4cff00;
 }
 
-.cmdr-console .output .warning {
+.cmdr .output .warning {
     color: yellow;
 }
 
-.cmdr-console .output .error {
+.cmdr .output .error {
     color: red;
 }
