--- a/src/shell.scss
+++ b/src/shell.scss
@@ -1,9 +1,14 @@
 .cmdr-shell {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;  
     overflow-y: auto;
     padding: 5px;
     color: #fff;
     font-family: "Courier New";
     font-size: 10pt;
+    width: 100%;
+    height: 100%;
 
     .input {
         -webkit-box-sizing: border-box;
