--- a/src/shell.scss
+++ b/src/shell.scss
@@ -5,6 +5,7 @@
     overflow-y: auto;
     padding: 5px;
     color: #fff;
+    background: #000;
     font-family: "Courier New";
     font-size: 10pt;
     width: 100%;
