--- a/dev/cmdr.css
+++ b/dev/cmdr.css
@@ -4,10 +4,6 @@
   box-sizing: border-box;
   overflow-y: auto;
   padding: 5px;
-  color: #fff;
-  background: #000;
-  font-family: "Courier New";
-  font-size: 10pt;
   width: 100%;
   height: 100%; }
   .cmdr-shell .input {
@@ -25,7 +21,6 @@
       margin: 0;
       width: 100%;
       overflow: auto;
-      font-size: 10pt;
       position: absolute;
       left: 0;
       top: 0;
@@ -46,6 +41,37 @@
     color: yellow; }
   .cmdr-shell .output .error {
     color: red; }
+  .cmdr-shell--cmd {
+    color: #C0C0C0;
+    background: #000000;
+    font-family: Consolas, monaco, monospace;
+    font-size: 10pt; }
+  .cmdr-shell--powershell {
+    color: #EEEDF0;
+    background: #012456;
+    font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
+    font-size: 10pt; }
+  .cmdr-shell--ubuntu {
+    color: #FFFFFF;
+    background: #2f0b24;
+    font-family: 'Ubuntu Mono';
+    font-size: 10pt; }
+
+@font-face {
+  font-family: 'Ubuntu Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Ubuntu Mono"), local("UbuntuMono-Regular"), url(http://fonts.gstatic.com/s/ubuntumono/v6/ViZhet7Ak-LRXZMXzuAfkSYE0-AqJ3nfInTTiDXDjU4.woff2) format("woff2");
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+  /* latin-ext */ }
+
+@font-face {
+  font-family: 'Ubuntu Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Ubuntu Mono"), local("UbuntuMono-Regular"), url(http://fonts.gstatic.com/s/ubuntumono/v6/ViZhet7Ak-LRXZMXzuAfkY4P5ICox8Kq3LLUNMylGO4.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+  /* latin */ }
 
 .cmdr-overlay {
   position: absolute;
@@ -58,3 +84,15 @@
   overflow-y: auto; }
   .cmdr-overlay .cmdr-shell {
     background: transparent; }
+
+.cmdr-shell--cmd {
+  color: #C0C0C0;
+  background: #000000;
+  font-family: Consolas, monaco, monospace;
+  font-size: 10pt; }
+
+.cmdr-shell--powershell {
+  color: #EEEDF0;
+  background: #012456;
+  font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
+  font-size: 10pt; }
