--- a/dev/cmdr.css
+++ b/dev/cmdr.css
@@ -35,11 +35,11 @@
     white-space: -pre-wrap;
     white-space: -o-pre-wrap;
     white-space: pre-wrap; }
-  .cmdr-shell .output .success {
+  .cmdr-shell .success {
     color: #4cff00; }
-  .cmdr-shell .output .warning {
+  .cmdr-shell .warning {
     color: yellow; }
-  .cmdr-shell .output .error {
+  .cmdr-shell .error {
     color: red; }
   .cmdr-shell--cmd {
     color: #C0C0C0;
@@ -51,27 +51,6 @@
     background: #012456;
     font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
     font-size: 10pt; }
-  .cmdr-shell--ubuntu {
-    color: #FFFFFF;
-    background: #2f0b24;
-    font-family: 'Ubuntu Mono';
-    font-size: 10pt; }
-
-@font-face {
-  font-family: 'Ubuntu Mono';
-  font-style: normal;
-  font-weight: 400;
-  src: local("Ubuntu Mono"), local("UbuntuMono-Regular"), url(http://fonts.gstatic.com/s/ubuntumono/v6/ViZhet7Ak-LRXZMXzuAfkSYE0-AqJ3nfInTTiDXDjU4.woff2) format("woff2");
-  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-  /* latin-ext */ }
-
-@font-face {
-  font-family: 'Ubuntu Mono';
-  font-style: normal;
-  font-weight: 400;
-  src: local("Ubuntu Mono"), local("UbuntuMono-Regular"), url(http://fonts.gstatic.com/s/ubuntumono/v6/ViZhet7Ak-LRXZMXzuAfkY4P5ICox8Kq3LLUNMylGO4.woff2) format("woff2");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-  /* latin */ }
 
 .cmdr-overlay {
   position: absolute;
@@ -80,28 +59,5 @@
   left: 0;
   right: 0;
   opacity: 0.9;
-  overflow-y: auto; }
-
-.cmdr-shell--cmd {
-  color: #C0C0C0;
-  background: #000000;
-  font-family: Consolas, monaco, monospace;
-  font-size: 10pt; }
-
-.cmdr-shell--powershell {
-  color: #EEEDF0;
-  background: #012456;
-  font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
-  font-size: 10pt; }
-
-.cmdr-shell--ubuntu {
-  color: #FFFFFF;
-  background: #2f0b24;
-  font-family: 'Ubuntu Mono';
-  font-size: 10pt; }
-
-@font-face {
-  font-family: 'Ubuntu Mono';
-  font-style: normal;
-  font-weight: 400;
-  src: local("Ubuntu Mono"), local("UbuntuMono-Regular"), url(http://fonts.gstatic.com/s/ubuntumono/v6/ViZhet7Ak-LRXZMXzuAfkY4P5ICox8Kq3LLUNMylGO4.woff2) format("woff2"), url(http://fonts.gstatic.com/s/ubuntumono/v6/ViZhet7Ak-LRXZMXzuAfkYbN6UDyHWBl620a-IRfuBk.woff) format("woff"); }
+  overflow-y: auto;
+  z-index: 10000; }
