--- a/dev/cmdr.css
+++ b/dev/cmdr.css
@@ -1,4 +1,4 @@
-.cmdr-shell {
+.cmdr-terminal {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -6,14 +6,14 @@
   padding: 5px;
   width: 100%;
   height: 100%; }
-  .cmdr-shell .input {
+  .cmdr-terminal .input {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     position: relative; }
-    .cmdr-shell .input .prefix {
+    .cmdr-terminal .input .prefix {
       display: inline-block; }
-    .cmdr-shell .input .prompt {
+    .cmdr-terminal .input .prompt {
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
       box-sizing: border-box;
@@ -26,30 +26,35 @@
       top: 0;
       word-break: break-all;
       outline: 0; }
-    .cmdr-shell .input .prompt:focus {
+    .cmdr-terminal .input .prompt:focus {
       outline: none; }
-  .cmdr-shell .output div {
+  .cmdr-terminal .output div {
     word-break: break-all; }
-  .cmdr-shell .output span {
+  .cmdr-terminal .output span {
     white-space: -moz-pre-wrap;
     white-space: -pre-wrap;
     white-space: -o-pre-wrap;
     white-space: pre-wrap; }
-  .cmdr-shell .success {
+  .cmdr-terminal .success {
     color: #4cff00; }
-  .cmdr-shell .warning {
+  .cmdr-terminal .warning {
     color: yellow; }
-  .cmdr-shell .error {
+  .cmdr-terminal .error {
     color: red; }
-  .cmdr-shell--cmd {
+  .cmdr-terminal--cmd {
     color: #C0C0C0;
     background: #000000;
     font-family: Consolas, monaco, monospace;
     font-size: 10pt; }
-  .cmdr-shell--powershell {
+  .cmdr-terminal--powershell {
     color: #EEEDF0;
     background: #012456;
     font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
+    font-size: 10pt; }
+  .cmdr-terminal--ubuntu {
+    color: #EEEEEE;
+    background: #2C001E;
+    font-family: Consolas, monaco, monospace;
     font-size: 10pt; }
 
 .cmdr-overlay {
