--- a/src/terminal.scss
+++ b/src/terminal.scss
@@ -12,6 +12,7 @@
         -moz-box-sizing: border-box;
         box-sizing: border-box;  
         position: relative;
+        margin-bottom: 5px;
     
         .prefix {
             display: inline-block;
